# tldrists

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md
.github/: dependabot.yaml
.github/workflows/: generator.yaml  website.yaml
generator/: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
generator/src/: main.py
generator/src/tldrists_generator/: cli.py
generator/src/tldrists_generator/commands/: notae.py
generator/tests/unit/tldrists_generator/: cli_test.py
website/: .lighthouserc-dark.json  .lighthouserc-light.json  .lighthouserc.json  CLAUDE.md  README.md  go.mod  go.sum  hugo.toml
website/content/notae/: _index.md
website/data/: notae.json
website/layouts/partials/icons/: icon.html
website/themes/tldrists/assets/css/: main.css
website/themes/tldrists/assets/js/: main.js
website/themes/tldrists/layouts/_partials/: head.html  header.html  menu.html
website/themes/tldrists/layouts/notae/: list.html  single.html
