[project]
name = "tldrists-generator"
version = "0.1.0"
description = "The microblogging generator for TLDRists."
authors = [
    {name = "Felix Müller",email = "felix@fmueller.io"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic-ai-slim[openai] (>=0.8.1,<0.9.0)"
]

[project.scripts]
tldrists-gen = "tldrists_generator.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "tldrists_generator", from = "src" }
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.14.2"
pre-commit = "^4.3.0"
types-pyyaml = "^6.0.12.20250915"
pytest = "^8.4.2"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = "src/**/*.py,tests/**/*.py"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
